--- a/www/contractorMyJobs.html
+++ b/www/contractorMyJobs.html
@@ -3,96 +3,128 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>承包人：我的案件</title>
-  <style>
-    body { font-family: system-ui, -apple-system, "Microsoft JhengHei", Arial, sans-serif; padding: 16px; }
-    h1 { margin: 0 0 12px; }
-    .toolbar { margin: 8px 0 16px; display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-    table { border-collapse: collapse; width: 100%; }
-    th, td { border: 1px solid #ddd; padding: 8px; }
-    th { background: #f2f2f2; text-align: left; }
-    tr:hover { background: #fafafa; }
-    .btn { display: inline-block; padding: 6px 10px; border: 1px solid #aaa; border-radius: 6px; text-decoration: none; color: #222; background:#fff; }
-    .btn:hover { background: #f5f5f5; }
-    .btn.primary { background:#007bff; color:#fff; border-color:#007bff; }
-    .muted { color: #666; font-size: 13px; }
-    #error { color: #b30000; margin: 8px 0; }
-    .status-won { color: #155724; font-weight: bold; }
-    .status-lost { color: #721c24; }
-  </style>
+  <title>承包人：我的報價 / 案件</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
-<body>
-  <h1>承包人：我的報價 / 案件</h1>
-  <div class="toolbar">
-    <a class="btn" href="/contractorMyInvitations.html">我的邀請</a>
-    <a class="btn primary" href="/contractorJobs.html">瀏覽可報價案件</a>
-    <a class="btn" href="/history.html">查看歷史紀錄</a>
-    <a class="btn" href="/logout">切換帳號</a>
-    <a class="btn" href="/logout">登出</a>
-    <span id="who" class="muted"></span>
+<body class="page">
+  <div class="page-inner">
+    <!-- 頁首：標題 + 登入身分 -->
+    <header class="page-header">
+      <div>
+        <h1 class="page-title">承包人：我的報價 / 案件</h1>
+        <p class="page-subtitle">
+          這裡可以查看您曾經報價過的案件，以及您已承接或被退件的案件狀態。
+        </p>
+      </div>
+      <span id="who" class="who-tag"></span>
+    </header>
+
+    <!-- 工具列按鈕：左邊是「我的邀請 / 可報價案件」，右邊是其他功能 -->
+    <div class="toolbar">
+      <a class="btn btn-secondary" href="/contractorMyInvitations.html">我的邀請</a>
+      <a class="btn btn-primary" href="/contractorJobs.html">瀏覽可報價案件</a>
+
+      <span class="toolbar-spacer"></span>
+
+      <a class="btn btn-secondary" href="/history.html">查看歷史紀錄</a>
+      <a class="btn btn-secondary" href="/logout">切換帳號</a>
+      <a class="btn btn-secondary" href="/logout">登出</a>
+    </div>
+
+    <!-- 內容卡片：錯誤訊息 + 表格 -->
+    <div class="card">
+      <div id="error" class="error-text"></div>
+
+      <div class="table-wrapper">
+        <table id="jobsTable" class="table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>標題</th>
+              <th>委託人</th>
+              <th>案件狀態</th>
+              <th>我的報價</th>
+              <th>我的狀態</th>
+              <th>動作</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
-  <div id="error"></div>
-  <p class="muted">這裡是您主動「報價」過的案件，或是您已「得標」的案件。若要查看委託人「邀請」您的案件，請至「我的邀請」。</p>
-  <table id="jobsTable">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>標題</th>
-        <th>委託人</th>
-        <th>案件狀態</th>
-        <th>我的報價</th>
-        <th>我的狀態</th>
-        <th>動作</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
   <script>
-    async function fetchJSON(url, options={}) {
+    async function fetchJSON(url, options = {}) {
       const resp = await fetch(url, options);
-      if (resp.status === 401 || resp.redirected) { window.location.href = "/loginForm.html"; return null; }
-      if (resp.status === 403) { throw new Error("權限不足"); }
+      if (resp.status === 401 || resp.redirected) {
+        window.location.href = "/loginForm.html";
+        return null;
+      }
+      if (resp.status === 403) {
+        throw new Error("權限不足");
+      }
       const ct = resp.headers.get("content-type") || "";
       return ct.includes("application/json") ? resp.json() : resp.text();
     }
-    const escapeHTML = s => s==null ? "" : String(s).replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
-    const currency = new Intl.NumberFormat("zh-Hant-TW", { style:"currency", currency:"TWD", maximumFractionDigits:0 });
-    const fmtMoney = n => (n==null ? '<span class="muted">—</span>' : currency.format(Number(n)));
+
+    const escapeHTML = s =>
+      s == null
+        ? ""
+        : String(s)
+            .replace(/&/g, "&amp;")
+            .replace(/</g, "&lt;")
+            .replace(/>/g, "&gt;");
+
+    const currency = new Intl.NumberFormat("zh-Hant-TW", {
+      style: "currency",
+      currency: "TWD",
+      maximumFractionDigits: 0,
+    });
+    const fmtMoney = n =>
+      n == null ? '<span class="text-muted">—</span>' : currency.format(Number(n));
 
     async function loadMe() {
       const me = await fetchJSON("/me");
       if (!me) return;
-      document.getElementById("who").textContent = `（登入中：${me.role} ${me.username}）`;
+      document.getElementById("who").textContent =
+        `登入中：${me.role} ${me.username}`;
     }
 
     async function loadJobs() {
       const data = await fetchJSON("/contractor/my-jobs");
       if (!data) return;
+
       const tbody = document.querySelector("#jobsTable tbody");
       tbody.innerHTML = "";
 
       if (!data.items || data.items.length === 0) {
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td colspan="7" class="muted">您尚未報價或承接任何案件</td>`;
+        tr.innerHTML =
+          `<td colspan="7" class="text-muted">您尚未報價或承接任何案件</td>`;
         tbody.appendChild(tr);
         return;
       }
 
       for (const j of data.items) {
         let myStatus = "";
-        if (j.status === 'pending') {
-            myStatus = '<span class="muted">待選標</span>';
+        if (j.status === "pending") {
+          myStatus = '<span class="text-muted">待選標</span>';
         } else if (j.am_i_winner) {
-            // [修改] 增加 'rejected' 狀態判斷
-            if (j.status === 'rejected') {
-                myStatus = `<span class="status-lost" style="font-weight:bold;">被退件 (點詳情重傳)</span>`;
-            } else {
-                myStatus = `<span class="status-won">得標 (狀態: ${escapeHTML(j.status)})</span>`;
-            }
+          if (j.status === "rejected") {
+            myStatus =
+              '<span class="badge badge-yellow">被退件（點詳情重傳）</span>';
+          } else {
+            myStatus =
+              `<span class="badge badge-green">得標（狀態：${escapeHTML(
+                j.status
+              )}）</span>`;
+          }
         } else {
-            myStatus = `<span class="status-lost">未得標 (狀態: ${escapeHTML(j.status)})</span>`;
+          myStatus =
+            `<span class="text-muted">未得標（狀態：${escapeHTML(
+              j.status
+            )}）</span>`;
         }
 
         const tr = document.createElement("tr");
@@ -103,20 +135,28 @@
           <td>${escapeHTML(j.status)}</td>
           <td>${fmtMoney(j.my_bid_price)}</td>
           <td>${myStatus}</td>
-          <td><a class="btn" href="/jobDetail.html?job_id=${j.id}">查看詳情</a></td>
+          <td>
+            <a class="btn btn-secondary btn-sm" href="/jobDetail.html?job_id=${j.id}">
+              查看詳情
+            </a>
+          </td>
         `;
         tbody.appendChild(tr);
       }
     }
 
     (async () => {
-      try { await loadMe(); await loadJobs(); }
-      catch (e) { document.getElementById("error").textContent = "載入失敗：" + e; }
+      try {
+        await loadMe();
+        await loadJobs();
+      } catch (e) {
+        document.getElementById("error").textContent = "載入失敗：" + e;
+      }
     })();
-	
-	window.addEventListener('pageshow', function (e) {
-    if (e.persisted) location.reload();
-  });
+
+    window.addEventListener("pageshow", function (e) {
+      if (e.persisted) location.reload();
+    });
   </script>
 </body>
 </html>
